# 2024-P1-Shodalime

./: README.md  pyproject.toml
.csse6400/tests/: test_todo.py
todo/: endpoints.http
todo/views/: routes.py
