[tool.poetry]
name = "2024-p1-shodalime"
version = "0.1.0"
description = ""
authors = ["Shodalime <66822224+Shodalime@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
